--- a/styles/scss/_variables.scss
+++ b/styles/scss/_variables.scss
@@ -7,6 +7,7 @@ $study-bg: hsl(348, 100%, 68%); //study
 $exercise-bg: hsl(145, 58%, 55%); //exercise
 $social-bg: hsl(264, 64%, 52%); //social
 $self-care-bg: hsl(43, 84%, 65%); //self care
+$activity-hover-bg: hsl(236, 40%, 34%);
 /* Neutral */
 $body-bg: hsl(226, 43%, 10%);
 $component-bg: hsl(235, 46%, 20%);
