modified:   scripts/script.js 	modified:   styles/css/main.css 	modified:   styles/css/main.css.map 	modified:   styles/scss/components/_dashboardHeader.scss

--- a/styles/scss/components/_dashboardHeader.scss
+++ b/styles/scss/components/_dashboardHeader.scss
@@ -43,6 +43,7 @@
         align-items: center;
         padding-block: 1.25rem;
         padding-inline: 2rem;
+        color: v.$date-range-text;
 
         .time_daily,
         .time_weekly,
