--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -109,6 +109,7 @@ p, h1, h2, h3, h4, h5, h6 {
   align-items: center;
   padding-block: 1.25rem;
   padding-inline: 2rem;
+  color: hsl(235, 45%, 61%);
 }
 .dashboard_header .header_report_time .time_daily,
 .dashboard_header .header_report_time .time_weekly,
