--- a/styles/scss/components/_dashboardHeader.scss
+++ b/styles/scss/components/_dashboardHeader.scss
@@ -8,7 +8,7 @@
     border-radius: v.$border-radius;
 
     @media screen and (min-width: v.$min-width) {
-        grid-area: header;
+        grid-row: 1/-1;
     }
 
     .header_avatar {
@@ -19,10 +19,19 @@
         padding: 2rem;
         border-radius: inherit;
 
+        @media screen and (min-width: v.$min-width) {
+            flex-direction: column;
+            align-items: start;
+        }
+
         .avatar_img {
             max-width: 4.5rem;
             border: .1875rem solid white;
             border-radius: 100vw;
+
+            @media screen and (min-width: v.$min-width) {
+                max-width: 5.25rem;
+            }
         }
 
         .avatar_info {
@@ -30,9 +39,18 @@
             font-weight: v.$fw-light;
             font-size: calc(v.$fs / 1.125);
 
+            @media screen and (min-width: v.$min-width) {
+                padding-block: 1.5rem 3rem;
+            }
+
             .avatar_name {
                 color: white;
                 font-size: calc(v.$fs * 1.25);
+
+                @media screen and (min-width: v.$min-width) {
+                    font-size: calc(v.$fs * 2.25);
+                    line-height: 1.125;
+                }
             }
         }
     }
@@ -45,6 +63,13 @@
         padding-inline: 2rem;
         color: v.$date-range-text;
 
+        @media screen and (min-width: v.$min-width) {
+            flex-direction: column;
+            align-items: start;
+            gap: 1.125rem;
+            margin-block: auto;
+        }
+
         .time_daily,
         .time_weekly,
         .time_monthly {
@@ -53,6 +78,10 @@
             background-color: transparent;
             border: none;
             cursor: pointer;
+
+            @media screen and (min-width: v.$min-width) {
+                padding: 0;
+            }
         }
 
         .time_weekly {
